# cifar_test

./: .cproject  .gitignore  .project  CMakeLists.txt  cifar10_quick.prototxt  cifar10_quick_iter_5000.caffemodel.h5
Release/: makefile
Release/src/: cifar_test.d  subdir.mk
src/: cifar_test.cpp  cifar_util.cpp  cifar_util.h
